--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 10px;
-    background-color: black !important;
+    background-color: #272934  !important;
 }
 .logonavbar{
     width: 50px;
@@ -12,23 +12,27 @@
     border-radius: 10px;
 }
 #menuitem{
-    color: white !important;
+    color: rgba(255, 255, 255, 0.733) !important;
 }
 .kiuviname{
+    text-align: left;
     margin-top: 10px;
     font-family: 'Expletus Sans', cursive;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.822);
 }
 .BotonContacto{
-border-color: #4FEAA9;
-color: white;
-background-color: #4FEAA9;
+border-color: #4feaaac2;
+color: rgb(0, 0, 0);
+background-color: #4feaaab9;
 margin-left: 10px;
 margin-right: 10px;
+color: rgb(255, 255, 255);
 }
-
+.navbar .navbar-collapse {
+    text-align: center;
+  }
 #responsive-navbar-nav{
-    background-color: black;
+    background-color: #272934 ;
 }
 #botonlogo{
     border-color: transparent;
